# VMGram

./: .gitignore  build.gradle  gradle.properties  settings.gradle
TMessagesProj/: build.gradle  proguard-rules.pro
TMessagesProj/config/debug/: AndroidManifest.xml  AndroidManifest_SDK23.xml
TMessagesProj/config/release/: AndroidManifest.xml  AndroidManifest_SDK23.xml  AndroidManifest_standalone.xml
TMessagesProj/jni/: CMakeLists.txt  audio.c
TMessagesProj/jni/intro/: IntroRenderer.c
TMessagesProj/jni/voip/: CMakeLists.txt
TMessagesProj/src/main/: AndroidManifest.xml
TMessagesProj/src/main/assets/: vmgram.attheme
TMessagesProj/src/main/res/drawable/: circle_voice_icon_background.xml  ic_arrow.xml  ic_call_directly.xml  ic_change_voice.xml  ic_preview_voice.xml  ic_sound_effect_with_border.xml  ic_sound_effects.xml  ic_vm_circle.xml  ic_vm_search_close.xml  ic_vm_search_sounds.xml  ic_vm_soundboard.xml  ic_voice_filter.xml  ic_voice_filter_icon.xml  ic_voice_filter_icon_disabled.xml  ic_voice_filter_icon_outline.xml  ic_voice_filter_off.xml  ic_voice_filter_outline.xml  ic_voice_filter_popup.xml  ic_voicemod_logo_white.xml  intro_button_background.xml  rounded_applied_button.xml  rounded_button.xml  rounded_corners_edittext.xml  rounded_corners_first_item_spinner.xml  rounded_corners_last_item_spinner.xml  rounded_corners_spinner.xml  rounded_corners_spinner_content.xml  sound_gradient_top.xml  stop_button_box_rounded.xml  vm_code_icon.xml  vm_demo_logo.xml  vm_demo_voice_skin.xml  vm_ok_code_bkg.xml  vm_voice_applied_bkg.xml  vmgram_splash_icon.xml
TMessagesProj/src/main/res/layout/: header_list_item.xml  search_input_item_view.xml  (+13 more)
TMessagesProj_App/: build.gradle
TMessagesProj_App/src/main/: AndroidManifest.xml
TMessagesProj_AppHockeyApp/: build.gradle
TMessagesProj_AppHuawei/: build.gradle
TMessagesProj_AppHuawei/src/main/: AndroidManifest.xml
VMGramAidl/: .gitignore  build.gradle
VMGramAidl/src/main/cpp/: CMakeLists.txt
VMGramAidl/src/main/cpp/include/aidl/net/voicemod/vmgramservice/: BnVMGramAidl.h  BpVMGramAidl.h  Enums.hpp  ParcelableBoolean.hpp  ParcelableInteger.hpp  ParcelableString.hpp  VMGramAidl.h  VmgsResultAidl.hpp
VMGramAidl/src/main/cpp/net/voicemod/vmgramservice/: VMGramAidl.cpp
VMGramClient/: build.gradle
VMGramClient/src/main/cpp/: CMakeLists.txt
VMGramClient/src/main/cpp/net/voicemod/vmgramservice/include/: VMGramClient.h
VMGramClient/src/main/cpp/net/voicemod/vmgramservice/src/: JNIStringHelper.hpp  VMGramClient.cpp
VMGramService/: build.gradle
(+144 files in other folders)
